Fix table layour on mobile.

--- a/sass/source/4_elements/_tables.scss
+++ b/sass/source/4_elements/_tables.scss
@@ -1,7 +1,6 @@
 table {
   table-layout: fixed;
   border-collapse: collapse;
-  width: max-content;
 }
 
 th, td {
